Bug 1598865 - do not use new hidden/system files detected in mail account local storage as mail folders. r=mkmelin