mailnews/local/src/nsMsgLocalStoreUtils.h
@@ -26,7 +26,7 @@ class nsMsgLocalStoreUtils {
   nsMsgLocalStoreUtils();
 
   static nsresult AddDirectorySeparator(nsIFile *path);
-  static bool nsShouldIgnoreFile(nsAString &name);
+  static bool nsShouldIgnoreFile(nsAString &name, nsIFile *path);
   static void ChangeKeywordsHelper(nsIMsgDBHdr *message, uint64_t desiredOffset,
                                    nsLineBuffer<char> *lineBuffer,
                                    nsTArray<nsCString> &keywordArray, bool aAdd,
